Substitute deprectaed Integer constructor